--- a/inst/rmd/P2.Rmd
+++ b/inst/rmd/P2.Rmd
@@ -2637,7 +2637,7 @@ kable(tab36_final, col.names = c("Question ID", paste0("# (%) Screened ", tab_sc
 ```
 
 
-## Table 37: PREPARE Number of Encounters and Percent of Encounters Screened by Year - Ambulatory Encounters Only (`r tab_screen_years[[1]]` - Present)
+## Table 37: PRAPARE Number of Encounters and Percent of Encounters Screened by Year - Ambulatory Encounters Only (`r tab_screen_years[[1]]` - Present)
 
 ```{r tab37_res, echo = F, include=T, error=T }
 
@@ -2739,7 +2739,7 @@ tab37_final <- tab37_total_wide[c("question_id","combined_1", "combined_2", "com
 kable(tab37_final, col.names = c("Question ID", paste0("# (%) Screened ", tab_screen_years[[1]]), paste0("# (%) Screened ", tab_screen_years[[2]]), paste0("# (%) Screened ", tab_screen_years[[3]]),  paste0("# (%) Screened ", tab_screen_years[[4]]), paste0("# (%) Screened ", tab_screen_years[[5]])), row.names = F, align = 'c', format.args = list(big.mark = ","))
 ```
 
-## Table 38: PREPARE Number of Patients and Percent of Patients Screened by Year - All Encounter Types (`r tab_screen_years[[1]]` - Present)
+## Table 38: PRAPARE Number of Patients and Percent of Patients Screened by Year - All Encounter Types (`r tab_screen_years[[1]]` - Present)
 
 ```{r tab38_res, echo = F, include=T, error=T }
 
@@ -2845,7 +2845,7 @@ tab38_final <- tab38_total_wide[c("question_id","combined_1", "combined_2", "com
 kable(tab38_final, col.names = c("Question ID", paste0("# (%) Screened ", tab_screen_years[[1]]), paste0("# (%) Screened ", tab_screen_years[[2]]), paste0("# (%) Screened ", tab_screen_years[[3]]),  paste0("# (%) Screened ", tab_screen_years[[4]]), paste0("# (%) Screened ", tab_screen_years[[5]])), row.names = F, align = 'c', format.args = list(big.mark = ","))
 ```
 
-## Table 39: PREPARE Number of Patients and Percent of Patients Screened by Year - Ambulatory Encounters Only (`r tab_screen_years[[1]]` - Present)
+## Table 39: PRAPARE Number of Patients and Percent of Patients Screened by Year - Ambulatory Encounters Only (`r tab_screen_years[[1]]` - Present)
 
 ```{r tab39_res,echo = F, include=T, error=T }
 
@@ -2949,7 +2949,7 @@ tab39_final <- tab39_total_wide[c("question_id","combined_1", "combined_2", "com
 kable(tab39_final, col.names = c("Question ID", paste0("# (%) Screened ", tab_screen_years[[1]]), paste0("# (%) Screened ", tab_screen_years[[2]]), paste0("# (%) Screened ", tab_screen_years[[3]]),  paste0("# (%) Screened ", tab_screen_years[[4]]), paste0("# (%) Screened ", tab_screen_years[[5]])), row.names = F, align = 'c', format.args = list(big.mark = ","))
 ```
 
-## Table 40: PREPARE Question 7 Text Table
+## Table 40: PRAPARE Question 7 Text Table
 
 ```{r tab40, echo = F, include=T, error=T }
 tab40 <- run_query( 
@@ -2982,7 +2982,7 @@ knitr::kable(tab40_total,
              format.args = list(big.mark = ","))
 ```
 
-## Table 41: PREPARE Question 8 Text Table
+## Table 41: PRAPARE Question 8 Text Table
 
 ```{r tab41, echo = F, include=T, error=T }
 tab41 <- run_query( 
@@ -3015,7 +3015,7 @@ knitr::kable(tab41_total,
              format.args = list(big.mark = ","))
 ```
 
-## Table 42: PREPARE Question 14 Text Table
+## Table 42: PRAPARE Question 14 Text Table
 
 ```{r tab42, echo = F, include=T, error=T }
 tab42 <- run_query( 
